updated error handling for ai service